--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.4.2",
+    "nocache": "^4.0.0",
+    "path": "^0.12.7",
+    "sessions": "0.0.2-7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
