--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.4",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7",
+    "razorpay": "^2.9.2",
     "sessions": "0.0.2-7",
+    "sharp": "^0.32.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
